active class to buttons

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </a>
         <ul class='navItems'>
             <li>
-                <a href="#">All</a>
+                <a class="lastActiveNav" href="#">All</a>
             </li>
             <li>
                 <a href="#">Branding</a>
@@ -65,7 +65,7 @@
             <i class="fas fa-grip-lines"></i>
         </div>
         <ul class="gridNav">
-            <li>All</li>
+            <li class='lastActiveGrid'>All</li>
             <li>Branding</li>
             <li>Web</li>
             <li>Photography</li>
